feat: change widget aesthetic

--- a/src/components/copy-text/index.scss
+++ b/src/components/copy-text/index.scss
@@ -4,7 +4,7 @@
   cursor: pointer;
 
   .copy-text-container {
-    border-color: #F75C1A;
+    border-color: #FFAE00;
     border-style: solid;
     border-radius: 10px;
     border-width: 0.5px;
