--- a/src/components/full-webpage-container/index.scss
+++ b/src/components/full-webpage-container/index.scss
@@ -61,7 +61,7 @@
     font-size: 36px;
     line-height: 48px;
     letter-spacing: -0.4px;
-    background: -webkit-linear-gradient(60deg, #E46735, #C93250, #CA488C);
+    background: #ffae00;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-bottom: 44px;
