--- a/src/components/input-group/index.scss
+++ b/src/components/input-group/index.scss
@@ -13,7 +13,12 @@
     font-size: 15px;
 
     .custom-input-label {
-      color: #F75C1A;
+      color: #FFAE00;
+    }
+
+    .custom-input-optional {
+      color: #8E8E93;
+      margin-left: 5px;
     }
 
     .custom-input-fiat-conversion {
