--- a/src/components/line-item/index.scss
+++ b/src/components/line-item/index.scss
@@ -9,7 +9,7 @@
   text-decoration: none!important;
 
   .label {
-    color: #F75C1A;
+    color: #FFAE00;
     flex: 2;
     text-align: left;
     font-size: 13px;
