--- a/src/components/spinner/index.scss
+++ b/src/components/spinner/index.scss
@@ -8,7 +8,7 @@
   min-width: 45px;
 
   .spinner {
-    color: #F75C1A;
+    color: #FFAE00;
     font-size: 4px;
     margin: auto;
     width: 1em;
