--- a/src/pages/public/claim/index.scss
+++ b/src/pages/public/claim/index.scss
@@ -28,7 +28,7 @@
     justify-content: space-between;
     font-weight: 600;
     font-size: 15px;
-    color: #F75C1A;
+    color: #FFAE00;
     margin-bottom: 10px;
   }
 
