--- a/src/pages/public/index.scss
+++ b/src/pages/public/index.scss
@@ -16,16 +16,11 @@ p {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	color: #ffffff;
+	color: #000000;
 	font-weight: 600;
 	height: 56px;
 	border-style: none;
-	background: linear-gradient(
-		90deg,
-		rgba(228, 103, 53, 0.98) 0%,
-		rgba(201, 50, 80, 0.98) 70.83%,
-		rgba(202, 72, 140, 0.98) 100%
-	);
+	background: #FFAE00;
 	border-radius: 58px;
 	font-size: 17px;
 	padding: 15px 30px;
