--- a/src/pages/public/menu/index.scss
+++ b/src/pages/public/menu/index.scss
@@ -20,7 +20,7 @@
 				line-height: 48px;
 				margin-right: 20px;
 				letter-spacing: -0.4px;
-				background: -webkit-linear-gradient(60deg, #e46735, #c93250, #ca488c);
+				background: #ffae00;
 				-webkit-background-clip: text;
 				-webkit-text-fill-color: transparent;
 			}
