--- a/src/pages/public/orders/index.scss
+++ b/src/pages/public/orders/index.scss
@@ -47,7 +47,7 @@
 				.order-status-heading {
 					font-weight: 600;
 					font-size: 15px;
-					color: #f75c1a;
+					color: #FFAE00;
 					margin-bottom: 10px;
 				}
 
