--- a/src/pages/public/settings/index.scss
+++ b/src/pages/public/settings/index.scss
@@ -1,6 +1,6 @@
 .settings-container {
 	.settings-heading {
-		color: #ff6600;
+		color: #FFAE00;
 		font-style: normal;
 		font-weight: 600;
 		font-size: 15px;
