--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -24,7 +24,7 @@ $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #d9534f !default;
-$orange:  #F75C1A !default;
+$orange:  #FFAE00 !default;
 $yellow:  #ffc107 !default;
 $green:   #5cb85c !default;
 $teal:    #20c997 !default;
