--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -1,6 +1,7 @@
 .form-card {
 	width: 480px;
-	min-height: 800px;
+	min-height: 649px;
+	max-height: 800px;
 	border-radius: 15px;
 	background: rgba(16, 16, 16, 0.92);
 	background-clip: content-box;
