--- a/src/components/heading/index.scss
+++ b/src/components/heading/index.scss
@@ -8,7 +8,7 @@
     font-size: 48px;
     line-height: 48px;
     letter-spacing: -0.4px;
-    background: -webkit-linear-gradient(60deg, #E46735, #C93250, #CA488C);
+    background: #FFAE00;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
