--- a/src/components/value-group/index.scss
+++ b/src/components/value-group/index.scss
@@ -6,7 +6,7 @@
       font-size: 15px;
       line-height: 15px;
       font-weight: 600;
-      color: #F75C1A;
+      color: #FFAE00;
     }
 
     .value-group-convert {
