--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -13,6 +13,7 @@
 		display: flex;
 		flex-direction: column;
 		flex: 1;
+		border: 1px solid #FFFFFF1A;
 		justify-content: space-between;
 
 		.form-card-content {
