feat: change widget aesthetic (#79)
* feat: change widget aesthetic

* feat: add border

* fix: fix titleInput

* fix: remove max-height

--- a/src/components/form-card/index.scss
+++ b/src/components/form-card/index.scss
@@ -1,6 +1,6 @@
 .form-card {
 	width: 480px;
-	min-height: 800px;
+	min-height: 649px;
 	border-radius: 15px;
 	background: rgba(16, 16, 16, 0.92);
 	background-clip: content-box;
@@ -12,6 +12,7 @@
 		display: flex;
 		flex-direction: column;
 		flex: 1;
+		border: 1px solid #FFFFFF1A;
 		justify-content: space-between;
 
 		.form-card-content {
